This commit, adds options to login on and signup on register and login pages, respectively. It also adds redirections after login and register.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,39 @@
-<div class="ui inverted menu nav teal">
+{% comment %} <div class="ui inverted menu nav teal">
     <div class="ui container">
       <a href="" class="item">
           <h3>xyz.com</h3>
       </a>
     </div>
+</div> {% endcomment %}
+
+<div class="ui inverted menu grey">
+  <div class="ui container">
+    <div class="ui header item">
+      xyz.com
+    </div>
+  </div>
+
 </div>
+
+{% comment %} <div class="pusher">
+  <div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui container">
+      <div class="ui large secondary inverted pointing menu">
+        <a class="toc item">
+          <i class="sidebar icon"></i>
+        </a>
+        <a class="active item">Home</a>
+        <a class="item">Work</a>
+        <a class="item">Company</a>
+        <a class="item">Careers</a>
+        <div class="right item">
+          <a class="ui inverted button">Log in</a>
+          <a class="ui inverted button">Sign Up</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+</div> {% endcomment %}
