--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="ui container">
     <div class="ui segment">
-        <div class="ui ">
+        <div class="ui">
         <form method="POST" class="ui form">
             {% csrf_token %}
+            <legend> Log In </legend>
             {{ form.as_p }}
             <div>
-            <button type="submit" class="ui positive button">Sign up</button>
+            <button type="submit" class="ui positive button">Log In</button>
             </div>
         </form>
         </div>
@@ -15,8 +17,9 @@
             Or
         </div>
         <div class="ui center aligned basic segment">
-            Already have an account?
-            <a href="/login">Sign in here</a>
+            Don't have an account?
+            <a href="/register">Sign up here</a>
         </div>
     </div>
+</div>
 {% endblock content %}
